# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.386 2005/11/18 15:39:32 wolf31o2 Exp $

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0_pre20051101-slot.patch, catalyst:
  Removing slot patch as it probably didn't belong here anyway, and updating
  version stamp to 2.0_pre20051118.

  18 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  targets/support/bootloader-setup.sh:
  fix the bootloader script for isolinux so that it actually makes a cfg file,
  remove extra unneeded catalyst aborting print statement, reorganize rm code
  to make sure is splits properly and is an array even from the cmdline

  17 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added call to update-usbids to download the latest usb.ids file.

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Move checks of running catalyst into the target which is simpler

  17 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Attempt to fix bug #111752, due to mount_safety_check calling a lock object
  that doesnt exist yet

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/kmerge.sh:
  Keep unnecessary programs from installing into kerncache

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Turn on more tracebacks at this point to better debug .. will need to turn
  them down as we find errors and build appropriate error handlers

  15 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed version marker to 2.0_pre20051115 for new ebuild.

  15 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Fix bug in livecd stage2 so that it doesnt try to use tar

  14 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>