@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.386 2005/11/18 15:39:32 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.387 2005/11/18 21:57:16 wolf31o2 Exp $
+
+  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/bootloader-setup.sh:
+  PPC yaboot.conf fix from Lars Weiler <pylon@gentoo.org>.
 
   18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   -catalyst-2.0_pre20051101-slot.patch, catalyst:
